--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-          integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="css.css">
+    <script src="http://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js"></script>
 </head>
 <body>
 <div class="container">
@@ -12,7 +17,7 @@
     <h1 style="text-align: center">Table</h1>
     <br>
     <div style="text-align: right">
-        <button type="button" class="btn btn-primary">Thêm sản phẩm</button>
+        <button type="button" class="btn btn-primary" id="btnAddProduct">Thêm sản phẩm</button>
     </div>
 
     <br>
@@ -36,30 +41,78 @@
         </table>
     </div>
 
-    <form id="formInput">
-        <div class="form-group">
-            <label for="inputName">Name</label>
-            <input type="name" name="name" class="form-control" id="inputName" aria-describedby="emailHelp">
-        </div>
-        <div class="form-group">
-            <label for="inputPrice">Price</label>
-            <input type="integer" name="price" class="form-control" id="inputPrice">
-        </div>
-        <div class="form-group">
-            <label for="inputQuantity">Quantity</label>
-            <input type="integer" class="form-control" id="inputQuantity">
-        </div>
-
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
 
 </div>
+
+<div class="modal fade" id="productModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" style="width: 80%; max-width: 800px;">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="productModalTitle"></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form id="formInput">
+
+                    <div class="row">
+                        <label class="col-lg-3 col-form-label" for="name">Tên sản phẩm:<span class="text-danger">*</span></label>
+                        <div class="form-group col-lg-9">
+                            <input type="text" name="name" id="name" class="form-control" value="">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <label class="col-lg-3 col-form-label" for="price">Giá sản phẩm:<span class="text-danger">*</span></label>
+                        <div class="form-group col-lg-9">
+                            <input type="number" name="price" id="price" class="form-control" value="">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-lg-3 col-form-label" for="description">Mô tả sản phẩm:</label>
+                        <div class="col-lg-9">
+                            <textarea class="form-control" name="description" id="description" rows="3"></textarea>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <label class="col-lg-3 col-form-label" for="quantity">Số lượng sản phẩm:<span class="text-danger">*</span></label>
+                        <div class="form-group col-lg-9">
+                            <input type="number" name="quantity" id="quantity" class="form-control" value="">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-lg-3 col-form-label" for="product_site">Nơi sản xuất:</label>
+                        <div class="col-lg-9">
+                            <input type="text" name="product_site" id="product_site" class="form-control" value="">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-lg-3 col-form-label" for="created_by">Người thêm:</label>
+                        <div class="col-lg-9">
+                            <input type="text" name="created_by" id="created_by" class="form-control" value="">
+                        </div>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary" id="btnSave">Lưu dữ liệu</button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </form>
+            </div>
+
+        </div>
+    </div>
+</div>
+
 </body>
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 <script src="javascript.js" defer></script>
 </html>
